Task 2.4 Using Polymer and Oauth2-Server with Project(Uptp Home Page)

--- a/public/pages/signin.css
+++ b/public/pages/signin.css
@@ -4,7 +4,7 @@ html,body {
     background-color: darkgray;
     font-family: 'RobotoDraft', sans-serif;
     text-align: center;
-    color: graytext;
+    color: blue;
 }
 core-header-panel {
     height: 100%;
