Task 2.7 Polymer and Oauth2-Server with Project(using Baasic-globals)

--- a/public/layouts/sidebar-layout.html
+++ b/public/layouts/sidebar-layout.html
@@ -16,7 +16,7 @@
                     <core-item icon="settings" label="Administration" active?="{{selected == 'admin'}}"><a is="pushstate-anchor" href="/#/admin"></a>
                         <!--<a href="/pages/admin-page.html"></a>--> 
                     </core-item>
-                    <!--<core-item icon="signout" label="Sign Out"></core-item>-->
+                    <core-item icon="settings" label="Sign Out"></core-item>
                 </core-menu>
             </core-header-panel>
             <div tool>SMS
