Task 3 Polymer, simple-oauth2 and Oauth2-Server with Project(Using Own ajax Element)

--- a/public/layouts/sidebar-layout.html
+++ b/public/layouts/sidebar-layout.html
@@ -17,7 +17,7 @@
                     <core-item icon="settings" label="Administration" active?="{{selected == 'admin'}}"><a is="pushstate-anchor" href="/#/admin"></a>
                         <!--<a href="/pages/admin-page.html"></a>--> 
                     </core-item>
-                    <core-item icon="settings" label="Sign Out" active?="{{selected == 'signout'}}"></core-item>
+                    <core-item icon="settings" label="Sign Out" active?="{{selected == 'signout'}}"><a is="pushstate-anchor" href="/#/signout"></a></core-item>
                     <!--<a is="pushstate-anchor" href="/#/signout"></a>-->
                 </core-menu>
             </core-header-panel>
