--- a/public/layouts/sidebar-layout.html
+++ b/public/layouts/sidebar-layout.html
@@ -10,13 +10,13 @@
         <link rel="stylesheet" href="sidebar-layout.css">
         <core-scaffold>
             <core-header-panel navigation flex mode="seamed">
-                <core-toolbar style="background-color: #526E9C; color: #fff;">WELCOME TO SMS</core-toolbar>
+                <core-toolbar style="background-color: #526E9C; color: #fff;">WELCOME TO ESAJEESOLUTIONS</core-toolbar>
                 <core-menu>
                     <core-item icon="home" label="Home" active?="{{selected == 'home'}}"><a is="pushstate-anchor" href="/#/home"></a>
                     </core-item>
-                    <core-item icon="setting" label="Manage Employees" active?="{{selected == 'employee'}}"><a is="pushstate-anchor" href="/#/employees"></a>
+                    <core-item icon="settings" label="Manage Employees" active?="{{selected == 'employee'}}"><a is="pushstate-anchor" href="/#/employees"></a>
                     </core-item>
-                    <core-item icon="setting" label="View Attendance" active?="{{selected == 'attendance'}}"><a is="pushstate-anchor" href="/#/attendance"></a>
+                    <core-item icon="settings" label="View Attendance" active?="{{selected == 'attendance'}}"><a is="pushstate-anchor" href="/#/attendance"></a>
                     </core-item>
                     <core-item icon="settings" label="Administration" active?="{{selected == 'admin'}}"><a is="pushstate-anchor" href="/#/admin"></a>
                         <!--<a href="/pages/admin-page.html"></a>--> 
