Task 4 Major Task Adding Employees form and View Attendance form in Project

--- a/public/layouts/sidebar-layout.html
+++ b/public/layouts/sidebar-layout.html
@@ -14,11 +14,11 @@
                 <core-menu>
                     <core-item icon="home" label="Home" active?="{{selected == 'home'}}"><a is="pushstate-anchor" href="/#/home"></a>
                     </core-item>
-                    <core-item icon="settings" label="Manage Employees" active?="{{selected == 'employee'}}"><a is="pushstate-anchor" href="/#/employees"></a>
+                    <core-item icon="accessibility" label="Manage Employees" active?="{{selected == 'employee'}}"><a is="pushstate-anchor" href="/#/employees"></a>
                     </core-item>
-                    <core-item icon="settings" label="View Attendance" active?="{{selected == 'attendance'}}"><a is="pushstate-anchor" href="/#/attendance"></a>
+                    <core-item icon="view-module" label="View Attendance" active?="{{selected == 'attendance'}}"><a is="pushstate-anchor" href="/#/attendance"></a>
                     </core-item>
-                    <core-item icon="settings" label="Administration" active?="{{selected == 'admin'}}"><a is="pushstate-anchor" href="/#/admin"></a>
+                    <core-item icon="account-child" label="Administration" active?="{{selected == 'admin'}}"><a is="pushstate-anchor" href="/#/admin"></a>
                         <!--<a href="/pages/admin-page.html"></a>--> 
                     </core-item>
                     <core-item icon="settings" label="Sign Out" active?="{{selected == 'signout'}}"><a is="pushstate-anchor" href="/#/signout"></a></core-item>
