Task 4.4 Reloading Issue using paginantion(not complete)

--- a/public/pages/signin.css
+++ b/public/pages/signin.css
@@ -148,6 +148,10 @@ button1
 {
     color: blue;
 }
-.cl {
-    background-color: blue;
+
+th.emphide {
+    display: none;
+}
+th.empshow {
+    display: table-cell;
 }
