--- a/public/layouts/sidebar-layout.html
+++ b/public/layouts/sidebar-layout.html
@@ -21,7 +21,7 @@
                     <core-item icon="account-child" label="Administration" active?="{{selected == 'admin'}}"><a is="pushstate-anchor" href="/#/admin"></a>
                         <!--<a href="/pages/admin-page.html"></a>--> 
                     </core-item>
-                    <!--<core-item icon="settings" label="Pager Test" active?="{{selected == 'test'}}"><a is="pushstate-anchor" href="/#/test"></a></core-item>-->
+                    <core-item icon="settings" label="Pager Test" active?="{{selected == 'test'}}"><a is="pushstate-anchor" href="/#/test"></a></core-item>
                     <core-item icon="settings" label="Sign Out" active?="{{selected == 'signout'}}"><a is="pushstate-anchor" href="/#/signout"></a></core-item>
                     <!--<a is="pushstate-anchor" href="/#/signout"></a>-->
                 </core-menu>
