--- a/public/layouts/sidebar-layout.html
+++ b/public/layouts/sidebar-layout.html
@@ -26,7 +26,7 @@
                     <!--<a is="pushstate-anchor" href="/#/signout"></a>-->
                 </core-menu>
             </core-header-panel>
-            <div tool>ESAJEESOLUTIONS
+            <div tool>
                 <content select=".title"></content>
             </div>
             <div class="content">
